@@ -142,16 +142,11 @@ A class for examining and manipulating the Java Bean Properties of an
 object.  Subclasses from Properties.java.
 
 
-CollectionPropertis.java
+CollectionProperties.java
 
 A class for examining and manipulating the slots of an array, Bag, List, 
 etc. as if they were Java Bean Properties.  Subclasses from 
 Properties.java.
-
-
-WordWrap.java
-
-A simple class for doing basic word wrapping in text fields and labels.
 
 
 CausedRuntimeException.java
@@ -160,7 +155,6 @@ A simple RuntimeException which stores an additional Throwable as its
 "cause".  This is standard fare in Java versions 1.4 and further but in 
 1.3 it doesn't exist.  Now it does!
 
+CausedRuntimeException has now been deprecated since MASON is leaving
+compatability with 1.3.
 
-Utilities.java
-
-A collection of random utility methods which don't fit anywhere else.
